# hackathon-nativebook

./: .gitignore
.agent/workflows/: sp.constitution.md  sp.implement.md  sp.plan.md  sp.specify.md  sp.tasks.md
.specify/memory/: constitution.md
chatbot-backend/: .env.example  Dockerfile  README.md  debug_qdrant.py  debug_signature.py  list_models.py  pyproject.toml  requirements.txt  test_agent.py  test_db.py  test_db_insert.py
chatbot-backend/app/: agent.py  config.py  database.py  embeddings.py  main.py  schemas.py  vector_store.py
chatbot-backend/scripts/: index_textbook.py
history/prompts/: 1-create-constitution.constitution.prompt.md  2-create-implementation-plan.plan.prompt.md  3-create-chatbot-spec.spec.prompt.md
my-website/: docusaurus.config.ts  package-lock.json  sidebars.ts
my-website/docs/: glossary.md  index.md  intro.md
my-website/docs/01-robotic-nervous-system/: 01-01-overview.md  01-02-ros2-architecture.md  01-03-rclpy-bridging.md  01-04-urdf-anatomy.md  01-05-lab-hello-robot.md  01-06-assessment.md  01-07-claude-code.md  README.md
my-website/docs/02-digital-twin/: README.md
my-website/docs/03-ai-robot-brain/: README.md
specs/001-ros2-book-module/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-gazebo-unity-sim/: plan.md  quickstart.md  spec.md  tasks.md
specs/003-isaac-ai-brain/: plan.md  quickstart.md  spec.md  tasks.md
specs/004-vision-language-action/: plan.md  quickstart.md  spec.md  tasks.md
specs/005-rag-chatbot/: plan.md  quickstart.md  spec.md  tasks.md
(+58 files in other folders)
